--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.19.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   }
 }
